--- a/templates/hiera.yaml.erb
+++ b/templates/hiera.yaml.erb
@@ -5,6 +5,7 @@
 :hierarchy:
   - "nodes/%{clientcert}"
   - "tiers/%{application_tier}"
+  - "roles/%{role}"
   - "oses/%{operatingsystem}"
   - common
 
